tests/rosetta/out/Fortran/catalan-numbers-2.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program catalan_numbers_2
  implicit none
    integer :: t1
    integer :: t2
    integer :: t3
    integer :: t5
    integer :: i
      character(len=100) :: s0
  main()
  contains
  recursive integer function catalanRec(n) result(res)
    integer, intent(in) :: n
    if ((n == 0)) then
      res = 1
      return
    end if
    t1 = (2 * n)
    t2 = (t1 - 1)
    t3 = (2 * t2)
    t5 = (t3 * catalanRec((n - 1)))
    res = int(((t5 / ((n + 1)))))
    return
  end function catalanRec
  recursive integer function main() result(res)
    do i = 1, 16
      write(s0,'(G0)') catalanRec(i)
      print *, s0
    end do
  end function main
end program catalan_numbers_2
